--- a/loading-button/loading-button.scss
+++ b/loading-button/loading-button.scss
@@ -12,10 +12,28 @@
    margin-top: -15px;
    transform: scale(0);
    visibility: hidden;
-   transition: transform 500ms cubic-bezier(0.35, 0, 0.25, 1);
+   transition: 500ms transform cubic-bezier(0.35, 0, 0.25, 1);
+
+   svg {
+      width: 20px;
+      height: 20px;
+   }
 }
 
 .loading .button-spinner {
    transform: none;
    visibility: inherit;
+
+   svg {
+      animation: spin 2s infinite linear;
+   }
+}
+
+@keyframes spin {
+   0% {
+     transform: rotate(0deg);
+   }
+   100% {
+     transform: rotate(360deg);
+   }
 }
