Fixed bug scan sonarQube

--- a/auth/forgot-password/forgot-password.component.html
+++ b/auth/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>
-   <i class="pe pe-7s-id"></i>{{'forgot.title' | translate}}
+   <em class="pe pe-7s-id"></em>{{'forgot.title' | translate}}
 </h1>
 
 <mat-dialog-content>
